deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whisper
  namespace: whisper-edge
  labels:
    app: whisper
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
    type: RollingUpdate

  selector:
    matchLabels:
      app: whisper
  template:
    metadata:
      labels:
        app: whisper
    spec:
      terminationGracePeriodSeconds: 3
      containers:
      - name: whisper
        image: quay.io/mangelajo/nv-whisper-edge:latest
        imagePullPolicy: IfNotPresent
        ports:
         - containerPort: 5000
        resources:
          requests:
            memory: "4096Mi"
          limits:
            memory: "5100Mi"

        livenessProbe:
          httpGet:
            path: /liveness
            port: 5000
          initialDelaySeconds: 15
          timeoutSeconds: 2
          periodSeconds: 5
          failureThreshold: 10

        readinessProbe:
          httpGet:
            path: /readiness
            port: 5000
          initialDelaySeconds: 10
          timeoutSeconds: 3
          periodSeconds: 10
          failureThreshold: 3
