deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: whisper
  name: whisper
spec:
  type: ClusterIP
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 5000
  selector:
    app: whisper
  sessionAffinity: None
