deployment/mdns_route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: whisper
  name: whisper
spec:
  host: whisper.local
  port:
    targetPort: 5000
  to:
    kind: Service
    name: whisper
    weight: 100
  wildcardPolicy: None
